// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Social Facebook Button Should render Default Button 1`] = `
<div>
  <button
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer rounded-600 h-[32px] min-w-[32px] text-body-sm leading-body-sm p-600 gap-300 bg-[#1877F2] hover:bg-[#166DDF] active:bg-[#1464CB] text-solid-slate-50"
  >
    <svg
      fill="#fff"
      height="24"
      role="img"
      viewBox="0 0 32 32"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#a)"
      >
        <path
          clip-rule="evenodd"
          d="M16 32c8.837 0 16-7.163 16-16S24.837 0 16 0 0 7.163 0 16s7.163 16 16 16Zm2.5-11.249v11.055a16.121 16.121 0 0 1-5 0V20.75H9.437v-4.653H13.5V12.55c0-4.034 2.389-6.263 6.043-6.263 1.751 0 3.582.315 3.582.315v3.961h-2.018c-1.987 0-2.607 1.241-2.607 2.514v3.02h4.438l-.71 4.653H18.5Z"
          fill="#1877F2"
          fill-rule="evenodd"
        />
        <path
          d="M18.5 20.751v11.055a16.121 16.121 0 0 1-5 0V20.75H9.437v-4.653H13.5V12.55c0-4.034 2.389-6.263 6.043-6.263 1.751 0 3.582.315 3.582.315v3.961h-2.018c-1.987 0-2.607 1.241-2.607 2.514v3.02h4.438l-.71 4.653H18.5Z"
          fill="#fff"
        />
      </g>
      <defs>
        <clippath
          id="a"
        >
          <path
            d="M0 0h32v32H0z"
            fill="#fff"
          />
        </clippath>
      </defs>
    </svg>
    <span
      class="flex-1"
    >
      Facebook
    </span>
  </button>
</div>
`;

exports[`Social Facebook Button Should render IconButton with className=opacity-50 1`] = `
<div>
  <button
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer rounded-600 h-[32px] min-w-[32px] text-body-sm leading-body-sm p-600 gap-300 bg-[#1877F2] hover:bg-[#166DDF] active:bg-[#1464CB] text-solid-slate-50 opacity-50"
  >
    <svg
      fill="#fff"
      height="24"
      role="img"
      viewBox="0 0 32 32"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#a)"
      >
        <path
          clip-rule="evenodd"
          d="M16 32c8.837 0 16-7.163 16-16S24.837 0 16 0 0 7.163 0 16s7.163 16 16 16Zm2.5-11.249v11.055a16.121 16.121 0 0 1-5 0V20.75H9.437v-4.653H13.5V12.55c0-4.034 2.389-6.263 6.043-6.263 1.751 0 3.582.315 3.582.315v3.961h-2.018c-1.987 0-2.607 1.241-2.607 2.514v3.02h4.438l-.71 4.653H18.5Z"
          fill="#1877F2"
          fill-rule="evenodd"
        />
        <path
          d="M18.5 20.751v11.055a16.121 16.121 0 0 1-5 0V20.75H9.437v-4.653H13.5V12.55c0-4.034 2.389-6.263 6.043-6.263 1.751 0 3.582.315 3.582.315v3.961h-2.018c-1.987 0-2.607 1.241-2.607 2.514v3.02h4.438l-.71 4.653H18.5Z"
          fill="#fff"
        />
      </g>
      <defs>
        <clippath
          id="a"
        >
          <path
            d="M0 0h32v32H0z"
            fill="#fff"
          />
        </clippath>
      </defs>
    </svg>
    <span
      class="flex-1"
    >
      Facebook
    </span>
  </button>
</div>
`;

exports[`Social Facebook Button Should render Primary Variant 1`] = `
<div>
  <button
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer rounded-600 h-[32px] min-w-[32px] text-body-sm leading-body-sm p-600 gap-300 bg-[#1877F2] hover:bg-[#166DDF] active:bg-[#1464CB] text-solid-slate-50"
  >
    <svg
      fill="#fff"
      height="24"
      role="img"
      viewBox="0 0 32 32"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#a)"
      >
        <path
          clip-rule="evenodd"
          d="M16 32c8.837 0 16-7.163 16-16S24.837 0 16 0 0 7.163 0 16s7.163 16 16 16Zm2.5-11.249v11.055a16.121 16.121 0 0 1-5 0V20.75H9.437v-4.653H13.5V12.55c0-4.034 2.389-6.263 6.043-6.263 1.751 0 3.582.315 3.582.315v3.961h-2.018c-1.987 0-2.607 1.241-2.607 2.514v3.02h4.438l-.71 4.653H18.5Z"
          fill="#1877F2"
          fill-rule="evenodd"
        />
        <path
          d="M18.5 20.751v11.055a16.121 16.121 0 0 1-5 0V20.75H9.437v-4.653H13.5V12.55c0-4.034 2.389-6.263 6.043-6.263 1.751 0 3.582.315 3.582.315v3.961h-2.018c-1.987 0-2.607 1.241-2.607 2.514v3.02h4.438l-.71 4.653H18.5Z"
          fill="#fff"
        />
      </g>
      <defs>
        <clippath
          id="a"
        >
          <path
            d="M0 0h32v32H0z"
            fill="#fff"
          />
        </clippath>
      </defs>
    </svg>
    <span
      class="flex-1"
    >
      Facebook
    </span>
  </button>
</div>
`;

exports[`Social Facebook Button Should render Secondary Variant 1`] = `
<div>
  <button
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer text-typography-prominent rounded-600 h-[32px] min-w-[32px] text-body-sm leading-body-sm p-600 gap-300 border-75 border-opacity-black-100 hover:bg-opacity-black-100 active:bg-opacity-black-200"
  >
    <svg
      fill="#fff"
      height="24"
      role="img"
      viewBox="0 0 32 32"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#a)"
      >
        <path
          clip-rule="evenodd"
          d="M16 32c8.837 0 16-7.163 16-16S24.837 0 16 0 0 7.163 0 16s7.163 16 16 16Zm2.5-11.249v11.055a16.121 16.121 0 0 1-5 0V20.75H9.437v-4.653H13.5V12.55c0-4.034 2.389-6.263 6.043-6.263 1.751 0 3.582.315 3.582.315v3.961h-2.018c-1.987 0-2.607 1.241-2.607 2.514v3.02h4.438l-.71 4.653H18.5Z"
          fill="#1877F2"
          fill-rule="evenodd"
        />
        <path
          d="M18.5 20.751v11.055a16.121 16.121 0 0 1-5 0V20.75H9.437v-4.653H13.5V12.55c0-4.034 2.389-6.263 6.043-6.263 1.751 0 3.582.315 3.582.315v3.961h-2.018c-1.987 0-2.607 1.241-2.607 2.514v3.02h4.438l-.71 4.653H18.5Z"
          fill="#fff"
        />
      </g>
      <defs>
        <clippath
          id="a"
        >
          <path
            d="M0 0h32v32H0z"
            fill="#fff"
          />
        </clippath>
      </defs>
    </svg>
    <span
      class="flex-1"
    >
      Facebook
    </span>
  </button>
</div>
`;

exports[`Social Facebook Button Should render no label if hideLabel is true 1`] = `
<div>
  <button
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer rounded-600 h-[32px] min-w-[32px] text-body-sm leading-body-sm bg-[#1877F2] hover:bg-[#166DDF] active:bg-[#1464CB] text-solid-slate-50"
  >
    <svg
      fill="#fff"
      height="24"
      role="img"
      viewBox="0 0 32 32"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#a)"
      >
        <path
          clip-rule="evenodd"
          d="M16 32c8.837 0 16-7.163 16-16S24.837 0 16 0 0 7.163 0 16s7.163 16 16 16Zm2.5-11.249v11.055a16.121 16.121 0 0 1-5 0V20.75H9.437v-4.653H13.5V12.55c0-4.034 2.389-6.263 6.043-6.263 1.751 0 3.582.315 3.582.315v3.961h-2.018c-1.987 0-2.607 1.241-2.607 2.514v3.02h4.438l-.71 4.653H18.5Z"
          fill="#1877F2"
          fill-rule="evenodd"
        />
        <path
          d="M18.5 20.751v11.055a16.121 16.121 0 0 1-5 0V20.75H9.437v-4.653H13.5V12.55c0-4.034 2.389-6.263 6.043-6.263 1.751 0 3.582.315 3.582.315v3.961h-2.018c-1.987 0-2.607 1.241-2.607 2.514v3.02h4.438l-.71 4.653H18.5Z"
          fill="#fff"
        />
      </g>
      <defs>
        <clippath
          id="a"
        >
          <path
            d="M0 0h32v32H0z"
            fill="#fff"
          />
        </clippath>
      </defs>
    </svg>
  </button>
</div>
`;

exports[`Social Facebook Button Should render properly with fullWidth true 1`] = `
<div>
  <button
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer w-full rounded-600 h-[32px] min-w-[32px] text-body-sm leading-body-sm p-600 gap-300 bg-[#1877F2] hover:bg-[#166DDF] active:bg-[#1464CB] text-solid-slate-50"
  >
    <svg
      fill="#fff"
      height="24"
      role="img"
      viewBox="0 0 32 32"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#a)"
      >
        <path
          clip-rule="evenodd"
          d="M16 32c8.837 0 16-7.163 16-16S24.837 0 16 0 0 7.163 0 16s7.163 16 16 16Zm2.5-11.249v11.055a16.121 16.121 0 0 1-5 0V20.75H9.437v-4.653H13.5V12.55c0-4.034 2.389-6.263 6.043-6.263 1.751 0 3.582.315 3.582.315v3.961h-2.018c-1.987 0-2.607 1.241-2.607 2.514v3.02h4.438l-.71 4.653H18.5Z"
          fill="#1877F2"
          fill-rule="evenodd"
        />
        <path
          d="M18.5 20.751v11.055a16.121 16.121 0 0 1-5 0V20.75H9.437v-4.653H13.5V12.55c0-4.034 2.389-6.263 6.043-6.263 1.751 0 3.582.315 3.582.315v3.961h-2.018c-1.987 0-2.607 1.241-2.607 2.514v3.02h4.438l-.71 4.653H18.5Z"
          fill="#fff"
        />
      </g>
      <defs>
        <clippath
          id="a"
        >
          <path
            d="M0 0h32v32H0z"
            fill="#fff"
          />
        </clippath>
      </defs>
    </svg>
    <span
      class="flex-1"
    >
      Facebook
    </span>
  </button>
</div>
`;
